# observable

./: CMakeLists.txt  buildntest  dependencies.cmake
src/: CMakeLists.txt
src/include/observable/: observable.h
test/: CMakeLists.txt
